--- a/src/style.css
+++ b/src/style.css
@@ -71,11 +71,13 @@ h6 {
   font-size: 14rem;
 }
 
+header {
+  background-color: var(--slate-800);
+}
 .menuMyDoc {
   border: none;
   outline: none;
   box-shadow: none;
-  font-size: var(--roboto-regular-14);
   padding: 1.4rem 1.4rem;
   background-color: var(--slate-800);
 }
