--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,7 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  font-size: var(--roboto-regular-14);
 }
 h1,
 h3,
@@ -70,14 +71,84 @@ h5 {
 h6 {
   font-size: 14rem;
 }
-
-header {
-  background-color: var(--slate-800);
-}
-.menuMyDoc {
+button {
   border: none;
   outline: none;
-  box-shadow: none;
-  padding: 1.4rem 1.4rem;
+}
+
+/* header style css */
+header {
   background-color: var(--slate-800);
+  display: flex;
+  gap: 1.6rem;
+}
+
+header > div:last-child {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-right: 0.4rem;
+}
+.nameDiv {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  flex-grow: 1;
+  width: 100%;
+  color: var(--slate-200);
+}
+.menuBtn {
+  padding: 1.2rem 1.2rem;
+  width: 5.4rem;
+  height: 5.4rem;
+  background-color: var(--slate-700);
+}
+.menuBtn > svg {
+  width: 2.4rem;
+}
+.saveDeleteDiv {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 0.5rem;
+}
+.saveDeleteDiv button:first-child,
+.saveDeleteDiv button:last-child,
+.menuBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.saveDeleteDiv button:first-child {
+  padding: 1rem;
+  background-color: var(--slate-800);
+}
+.saveDeleteDiv button:last-child {
+  padding: 1rem;
+  background-color: var(--orange);
+  border-radius: 0.2rem;
+}
+/* main section */
+.markDownPreview {
+  background-color: var(--slate-300);
+  padding: 1.4rem 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.markDownPreview h1 {
+  color: var(--slate-600);
+  font-size: var(--roboto-regular-15);
+  letter-spacing: var(--roboto-regular-char-spacing);
+}
+.markDownInput {
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+article {
+  background-color: var(--slate-900);
 }
