--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,12 @@
 html {
   font-size: 62.5%; /* 62.5% of 16px = 10px */
 }
-
+.app {
+  position: relative;
+}
+.hidden {
+  display: none;
+}
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
@@ -129,6 +134,14 @@ header > div:last-child {
   border-radius: 0.2rem;
 }
 /* main section */
+main {
+  position: absolute;
+  top: 0;
+  transform: translateX(0px);
+  width: 100%;
+  height: 100vh;
+  transition: transform ease 0.3s;
+}
 .markDownPreview {
   background-color: var(--slate-300);
   padding: 1.4rem 1rem;
@@ -152,6 +165,11 @@ header > div:last-child {
 /* side bar */
 
 article {
+  position: fixed;
+  transition: transform ease 0.3s;
+  top: 0;
+  transform: translateX(-250px);
+  overflow-x: hidden;
   background-color: var(--slate-900);
   display: flex;
   flex-direction: column;
