--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,8 @@ button {
 header {
   background-color: var(--slate-800);
   display: flex;
+  align-items: center;
+  justify-content: start;
   gap: 1.6rem;
 }
 
@@ -104,8 +106,8 @@ header > div:last-child {
 }
 .menuBtn {
   padding: 1.2rem 1.2rem;
-  width: 5.4rem;
-  height: 5.4rem;
+  width: 5.2rem;
+  height: 5.2rem;
   background-color: var(--slate-700);
 }
 .menuBtn > svg {
@@ -159,7 +161,8 @@ main {
   outline: none;
   border: none;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-color: var(--slate-400);
 }
 
 /* side bar */
