--- a/src/style.css
+++ b/src/style.css
@@ -86,15 +86,16 @@ header {
   background-color: var(--slate-800);
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
+
   gap: 1.6rem;
 }
 
 header > div:last-child {
   width: 100%;
   display: flex;
-  align-items: center;
   padding-right: 0.4rem;
+  align-items: center;
 }
 .nameDocument {
   border: none;
@@ -152,6 +153,10 @@ main {
   width: 100%;
   height: 100vh;
   transition: transform ease 0.3s;
+}
+.container {
+  display: flex;
+  flex-direction: column;
 }
 .markDownPreview {
   background-color: var(--slate-300);
