--- a/src/style.css
+++ b/src/style.css
@@ -277,35 +277,45 @@ article > h1 {
 }
 /* Modal styles */
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(5px);
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(5px);
 }
 
 .modal-content {
-    background-color: #fff;
-    
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
-    text-align: center;
+  background-color: #fff;
+  margin: 50% auto;
+  padding: 1.6rem;
+  border: 1px solid #888;
+  width: 90%;
+  max-width: 50rem;
+  border-radius: 0.4rem;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
 }
 
+.modal-content > p {
+  line-height: 1.5;
+}
 .modal-footer {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .btn {
-    padding: 10px 20px;
-    cursor: pointer;
+  background-color: var(--orange);
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 0.4rem;
+  color: var(--slate-200);
 }
