--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ html {
 }
 .app {
   position: relative;
-  width: 100%;
+  
 }
 .hidden {
   display: none;
@@ -157,6 +157,8 @@ main {
   width: 100%;
   height: 100%;
   transition: transform ease 0.3s;
+  overflow: hidden;
+  overscroll-behavior: contain;
 }
 .container {
   display: flex;
