--- a/src/style.css
+++ b/src/style.css
@@ -155,7 +155,7 @@ main {
   top: 0;
   transform: translateX(0px);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   transition: transform ease 0.3s;
   overflow: hidden;
   overscroll-behavior: contain;
@@ -209,7 +209,7 @@ article {
   flex-direction: column;
   justify-content: space-between;
   padding: 2rem 2rem;
-  height: 100%;
+  height: 100vh;
   width: 25rem;
 }
 article > h1 {
