--- a/src/style.css
+++ b/src/style.css
@@ -195,7 +195,16 @@ main {
   resize: none;
   background-color: var(--slate-400);
 }
-
+.convertedMarkDown {
+  padding: 1.6rem;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100vh;
+  overflow: visible;
+  resize: none;
+  background-color: var(--slate-400);
+}
 /* side bar */
 
 article {
