--- a/src/style.css
+++ b/src/style.css
@@ -185,7 +185,7 @@ main {
   padding: 1.6rem;
   justify-content: center;
 } */
-.markDownTextArea {
+/* .markDownTextArea {
   padding: 1.6rem;
   outline: none;
   border: none;
@@ -194,17 +194,8 @@ main {
   overflow: visible;
   resize: none;
   background-color: var(--slate-400);
-}
-.convertedMarkDown {
-  padding: 1.6rem;
-  outline: none;
-  border: none;
-  width: 100%;
-  height: 100vh;
-  overflow: visible;
-  resize: none;
-  background-color: var(--slate-400);
-}
+} */
+
 /* side bar */
 
 article {
@@ -349,4 +340,35 @@ article > h1 {
   width: 100%;
   border-radius: 0.4rem;
   color: var(--slate-200);
+}
+/* convertedMarkDown preview markdown*/
+.markDownTextArea {
+  padding: 1.6rem;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100vh;
+  overflow: visible;
+  resize: none;
+  background-color: var(--slate-200);
+}
+.convertedMarkDown {
+  padding: 1.6rem;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100vh;
+  overflow: visible;
+  resize: none;
+  background-color: var(--slate-200);
+}
+.convertedMarkDown > blockquote {
+  background-color: var(--slate-300);
+  padding: 2.4rem 1.6rem;
+  border-radius: 0.4rem;
+  border-left: 0.4rem solid var(--orange);
+  font-weight: bold;
+  font-size: small;
+  letter-spacing: 0.02rem;
+  line-height: 2rem;
 }
