--- a/src/style.css
+++ b/src/style.css
@@ -74,10 +74,11 @@ h4 {
   font-size: 2rem;
 }
 h5 {
-  font-size: 16rem;
+  font-size: 1.6rem;
 }
 h6 {
-  font-size: 14rem;
+  font-size: 1.4rem;
+  color: var(--orange);
 }
 button {
   border: none;
@@ -350,17 +351,17 @@ article > h1 {
   height: 100vh;
   overflow: visible;
   resize: none;
-  background-color: var(--slate-200);
+  background-color: var(--slate-100);
 }
 .convertedMarkDown {
   padding: 1.6rem;
   outline: none;
   border: none;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: visible;
   resize: none;
-  background-color: var(--slate-200);
+  background-color: var(--slate-100);
 }
 .convertedMarkDown > blockquote {
   background-color: var(--slate-300);
