--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,16 @@
   --slate-200: #f5f5f5;
 
   --white: #ffffff;
-
-  --headerBgMarkDownSection:#e4e4e4;
+  /* // light mode */
+  --headerBgMarkDownSection: #e4e4e4;
   --mainBgMarkDown: #ffffff;
   --mainBgPreview: ##ffffff;
-  --mainTextMarkDown:#2b2d31;
+  --mainTextMarkDown: #2b2d31;
   --mainTextPreview: #5a6069;
+  --blockQuoteBg: #e4e4e4;
+  --codeBlockBg: #e4e4e4;
+
+  --headingColor: #1d1f22;
   /* (orange and light orange) */
   --orange: #e46643;
   --orange-light: #f39765;
@@ -35,14 +39,18 @@
   --roboto-mono-regular: 1.4rem;
   --font-roboto-moni: "Roboto Mono", sans-serif;
 }
-.darkMode{
-  --mainTextMarkDown:#c1c4cb;
+.darkMode {
+  --mainTextMarkDown: #c1c4cb;
   --mainTextPreview: #7c8187;
 
   --mainBgMarkDown: #151619;
   --mainBgPreview: #151619;
 
-  --headerBgMarkDownSection:#e4e4e4;
+  --headerBgMarkDownSection: #1d1f22;
+  --blockQuoteBg: #1d1f22;
+  --codeBlockBg: #1d1f22;
+
+  --headingColor: #f5f5f5;
 }
 * {
   margin: 0;
@@ -402,4 +410,11 @@ article > h1 {
 .convertedMarkDown > .codeBlock {
   background-color: var(--slate-300);
   padding: 2rem;
+}
+.convertedMarkDown > h1,
+.convertedMarkDown > h2,
+.convertedMarkDown > h3,
+.convertedMarkDown > h4,
+.convertedMarkDown > h5 {
+  color: var(--headingColor);
 }
